tests/invalid/syntax/annotation_missing_name.fig
// INVALID: Annotation missing identifier
// Expected parse error: annotation name required after #
# struct Bad
    x: i32
